--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,11 @@
+{{#each posts as |post|}}
 <div>
     {{title}}
 </div>
 
 <div>
    Posted by {{user.username}} on {{created_at}}
+   <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
 </div>
+
+{{/each}}
