added login and signup handlebars, js, and routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,12 @@
     <body>
         <div>
             <header>
-                <h1>Tech Blog</h1>
+                <nav>
+                    <a href=""/login></a>
+                </nav>
+                <h1>
+                    <a href="/">Tech Blog</a>
+                </h1>
             </header>
             <main>
                 {{{ body }}}
