--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech Blog</title>
-        <link rel="stylesheet" href="/stylesheets/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tech Blog</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
 
-    <body>
-        <div>
-            <header>
-                <nav>
-                    <a href=""/login></a>
-                </nav>
-                <h1>
-                    <a href="/">Tech Blog</a>
-                </h1>
-            </header>
-            <main>
-                {{{ body }}}
-            </main>
-        </div>
-    </body>
+<body>
+    <div>
+        <header>
+            <nav>
+                
+                <a href="/">Home</a>
+                
+               
+                <button href="/" id="logout">Logout</button>
+              
+                <a href="/login">Login</a>
+                <h1>My Tech Blog</h1>
+            </nav>
+        </header>
+        <main>
+            {{{ body }}}
+        </main>
+    </div>
+    <script src="/javascript/logout.js"></script>
+</body>
+
 </html>
