--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form class="login-form">
     <div>
         <label for="username-login">username:</label>
         <input type="text" id="username-login" />
