--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form class="signup-form">
     <div>
         <label for="username-signup">username:</label>
         <input type="text" id="username-signup" />
