--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,11 @@
 {{#each posts as |post|}}
 <div>
-    {{title}}
+    <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
 </div>
 
 <div>
    Posted by {{user.username}} on {{created_at}}
-   <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+   
 </div>
 
 {{/each}}
