--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -26,5 +26,8 @@
     <div>
         <button type="submit">add comment</button>
     </div>
+
 </form>
+
+<script src="/javascript/comment.js"></script>
 
