--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,11 +5,13 @@
     </div>
     <div>
         <label for="password-login">password:</label>
-        <input type="text" id="password-login" />
+        <input type="password" id="password-login" />
     </div>
     <div>
         <button type="submit">Log Yourself In!</button>
-        <a href="/signup">Press me if you need to sign up instead!</a>
+    </div>
+    <div>
+        <a class="login-link" href="/signup">Press me if you need to sign up instead!</a>
     </div>
 </form>
 
