--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,11 +5,11 @@
     </div>
     <div>
         <label for="password-signup">password:</label>
-        <input type="text" id="password-signup" />
+        <input type="password" id="password-signup" />
     </div>
     <div>
         <button type="submit">Sign Yourself up!</button>
     </div>
 </form>
 
-<script src="/javascript/login.js"></script>
+<script src="/javascript/signup.js"></script>
