--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -13,13 +14,16 @@
     <div>
         <header>
             <nav>
-                
+
                 <a href="/">Home</a>
-                
-               
-                <button href="/" id="logout">Logout</button>
-              
+
+                {{#if loggedIn}}
+                <a href="/dashboard">Dashboard</a>
+                <button id="logout">Logout</button>
+               {{else}}
                 <a href="/login">Login</a>
+                {{/if}}
+
                 <h1>My Tech Blog</h1>
             </nav>
         </header>
@@ -27,7 +31,9 @@
             {{{ body }}}
         </main>
     </div>
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
