--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -18,6 +18,7 @@
     {{/each}}
 </div>
 
+{{#if loggedIn}}
 <form class="comment-form">
     <div>
         <textarea name="comment-body"></textarea>
@@ -26,8 +27,11 @@
     <div>
         <button type="submit">add comment</button>
     </div>
-
 </form>
+{{/if}}
 
+{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+{{/if}}
+
 
