added the login instead link on the signup page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,6 +10,9 @@
     <div>
         <button type="submit">Sign Yourself up!</button>
     </div>
+    <div>
+        <a class="login-link" href="/login">Press me if you need to login instead!</a>
+    </div>
 </form>
 
 <script src="/javascript/signup.js"></script>
