--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,7 @@
-{{#each posts as |post|}}
-<div>
-    <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
-</div>
-
-<div>
-   Posted by {{user.username}} on {{created_at}}
-   
-</div>
-
-{{/each}}
+<ol>
+    {{#each posts as |post|}}
+    <li>
+        {{> post-info post }}
+    </li>
+    {{/each}}
+</ol>
