--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,22 +1,6 @@
-<div class="card-body">
-    <h5 class="card-title">{{post.title}}</h5>
-    <p class="card-text">{{post.text_content}}</p>
-    <footer class="blockquote-footer">Post by {{post.user.username}} on {{post.created_at}}</footer>
-</div>
+{{> post-info post}}
 
-<div class="comments">
-    Comments:
-    {{#each post.comments}}
-    <section>
-        <div>
-            {{user.username}} on {{created_at}}
-        </div>
-        <div>
-            {{comment_text}}
-        </div>
-    </section>
-    {{/each}}
-</div>
+
 
 {{#if loggedIn}}
 <form class="comment-form">
@@ -35,3 +19,4 @@
 {{/if}}
 
 
+{{> comments post.comments}}
