--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,7 @@
 <article>
     <div>
         <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
+        {{text_content}}
     </div>
 
     <div>
