the last two helpers aren't needed but there for future

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,6 +5,6 @@
     </div>
 
     <div>
-        Posted by {{user.username}} on {{created_at}}
+        Posted by {{user.username}} on {{format_date created_at}}
     </div>
 </article>
