--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,4 +12,7 @@
 </section>
 {{/if}}
 
+<button type="submit" class="btn"><a class="link" href="/dashboard/new">+ New Post</a></button>
+
+
 <script src="/javascript/add-post.js"></script>
