--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,8 +1,8 @@
 <div class="card-body">
-    
+
     <h5 class="card-title">{{title}}</h5>
     <p class="card-text">{{text_content}}</p>
-    
+
 </div>
 
 <div class="comments">
@@ -15,6 +15,10 @@
         <div>
             {{comment_text}}
         </div>
+        <div>
+            <button type="submit" class="btn"><a class="link" href="/dashboard/comments/{{comment.id}}">Edit Comment</a></button>
+        </div>
     </section>
+
     {{/each}}
 </div>
