--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -9,7 +9,7 @@
     Comments:
     {{#each this}}
     <section>
-        <div>
+        <div class="bg-info">
             {{user.username}} on {{format_date created_at}}
         </div>
         <div>
