--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -4,7 +4,7 @@
         {{text_content}}
     </div>
 
-    <div>
+    <small>
         Posted by {{user.username}} on {{format_date created_at}}
-    </div>
+    </small>
 </article>
