--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        />
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-<body>
+<body class="bg-light">
     <div>
         <header>
-            <nav>
-
+            <nav class="navbar navbar-expand-lg navbar-light bg-dark text-warning">
+                <h1>My Tech Blog</h1>
                 <a href="/">Home</a>
 
                 {{#if loggedIn}}
@@ -24,10 +26,10 @@
                 <a href="/login">Login</a>
                 {{/if}}
 
-                <h1>My Tech Blog</h1>
+                
             </nav>
         </header>
-        <main>
+        <main class="p-5">
             {{{ body }}}
         </main>
     </div>
