--- a/views/edit-comment.handlebars
+++ b/views/edit-comment.handlebars
@@ -7,11 +7,11 @@
       <label class="form-label" for="comment_text">Content</label>
       <input name="comment_text" type="text" value="{{comment.comment_text}}"/>
     </div>
-    <div>
-      
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div>
-    <button type="submit">Save comment</button>
-    <button type="button" class="delete-comment-btn">Delete post</button>
+   
+    <button id="saveBtn" data-post="{{comment.post_id}}" type="submit">Save comment</button>
   </form>
+    <button id="deleteBtn" type="button" class="delete-comment-btn">Delete post</button>
 </article>
+
+<script src="/javascript/edit-comment.js"></script>
+<script src="/javascript/delete-comment.js"></script>
