--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -16,7 +16,7 @@
             {{comment_text}}
         </div>
         <div>
-            <button type="submit" class="btn"><a class="link" href="/dashboard/comments/{{comment.id}}">Edit Comment</a></button>
+            <button type="submit" class="btn"><a class="link" href="/dashboard/editcomments/{{id}}">Edit Comment</a></button>
         </div>
     </section>
 
