fixed the session for the new post

--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -1,3 +1,5 @@
+{{#if loggedIn}}
+
 <div class="card">
     <h3 class="card-header">Create New Post</h3>
     <form id="new-post-form" class="card-body">
@@ -12,3 +14,5 @@
     </form>
 </div>
 <script src="/javascript/add-post.js"></script>
+
+{{/if}}
