--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 <body class="bg-light">
     <div>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-dark text-warning">
+            <nav class="navbar navbar-light bg-dark text-warning p-5">
                 <h1>My Tech Blog</h1>
                 <a href="/">Home</a>
 
